...
        if let viewWithTag = self.view.viewWithTag(100) {
            viewWithTag.removeFromSuperview()
        }
    }

    func showInfo(message: String) {
        let alertAction = UIAlertAction(title: "Ok",
                                        style: .default,
                                        handler: nil)
        let alertController = UIAlertController(title:"Info", message: message, preferredStyle: .alert)
        alertController.addAction(alertAction)
        alertController.view.tintColor = UIColor.theme.accent
        present(alertController, animated: true, completion: nil)
    }

    func hideKeyboardWhenTappedAround() {
...
